Fix navbar and button page spacing and others.

--- a/src/assets/sass/components/_navbar.scss
+++ b/src/assets/sass/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  padding: 26px 0;
+  padding: 20px 0;
   background-color: getColor("black.black38");
   color: getcolor("color.base");
   position: sticky;
